@@ -7,6 +7,7 @@ package org.jetbrains.compose.reload.agent
 
 import org.jetbrains.compose.reload.core.Environment
 import org.jetbrains.compose.reload.core.HotReloadEnvironment
+import org.jetbrains.compose.reload.core.HotReloadEnvironment.devToolsDetached
 import org.jetbrains.compose.reload.core.HotReloadProperty.DevToolsClasspath
 import org.jetbrains.compose.reload.core.HotReloadProperty.Environment.DevTools
 import org.jetbrains.compose.reload.core.Os
@@ -17,6 +18,7 @@ import org.jetbrains.compose.reload.core.getOrThrow
 import org.jetbrains.compose.reload.core.info
 import org.jetbrains.compose.reload.core.issueNewDebugSessionJvmArguments
 import org.jetbrains.compose.reload.core.subprocessDefaultArguments
+import org.jetbrains.compose.reload.core.warn
 import org.jetbrains.compose.reload.core.withHotReloadEnvironmentVariables
 import java.io.File
 import java.nio.file.Path
@@ -31,13 +33,16 @@ internal fun launchDevtoolsApplication() {
     val classpath = HotReloadEnvironment.devToolsClasspath ?: error("Missing '${DevToolsClasspath}'")
     logger.info("Starting 'DevTools'")
 
-    val process = ProcessBuilder(
-        resolveDevtoolsJavaBinary(), "-cp", classpath.joinToString(File.pathSeparator),
+    val devToolsArgs = listOfNotNull(
+        resolveDevtoolsJavaBinary(),
+        *platformSpecificJvmArguments(),
+        "-cp", classpath.joinToString(File.pathSeparator),
         *subprocessDefaultArguments(DevTools, orchestration.port.getBlocking().getOrThrow()).toTypedArray(),
         *issueNewDebugSessionJvmArguments("DevTools"),
-        "-Dapple.awt.UIElement=true",
         "org.jetbrains.compose.devtools.Main",
-    ).withHotReloadEnvironmentVariables(DevTools)
+    )
+    val process = ProcessBuilder(devToolsArgs)
+        .withHotReloadEnvironmentVariables(DevTools)
         .start()
 
     thread(name = "DevTools: Stderr", isDaemon = true) {
@@ -62,4 +67,21 @@ private fun resolveDevtoolsJavaBinary(): String? {
     }
 
     return null
+}
+
+private fun platformSpecificJvmArguments(): Array<String> = when (Os.currentOrNull()) {
+    // Allow reflective access to X11 classes for Linux
+    // Required to properly set the app name in the taskbar
+    Os.Linux -> arrayOf("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
+    // Disable dock icon when not running in detached mode for MacOS
+    Os.MacOs -> arrayOf(
+        "-Dapple.awt.UIElement=${!devToolsDetached}",
+        "-Dapple.awt.application.name=Compose Hot Reload Dev Tools",
+    )
+    // No platform-specific options for Windows
+    Os.Windows -> emptyArray()
+    else -> {
+        logger.warn("Unknown OS")
+        emptyArray()
+    }
 }
